@@ -5,6 +5,7 @@
   - Add CGI::Tiny::epoch_to_date and CGI::Tiny::date_to_epoch convenience functions
   - Set Date header in all responses
   - Pass the CGI::Tiny object to the cgi block as $_ instead of in @_
+  - Remove the request_body_limit method
 
 0.002     2021-04-19 03:59:16 EDT
   - Remove header_names method
